--- a/test/klima-dashboard_test.html
+++ b/test/klima-dashboard_test.html
@@ -55,8 +55,8 @@
           <klima-dashboard-tile id="tileK" style="background-color: blue;" row="1" overlap="2" positions="[1,1,1]">K</klima-dashboard-tile>
           <klima-dashboard-tile id="tileL" style="background-color: red;" row="1" overlap="1" positions="[2,2]" width="40">L</klima-dashboard-tile>
           <klima-dashboard-tile id="tileM" style="background-color: yellow;" row="3" positions="[2]">M</klima-dashboard-tile>
-          <klima-dashboard-tile id="tileN" style="background-color: green;" row="1" positions="[3]" width="40">N</klima-dashboard-tile>
-          <klima-dashboard-tile id="tileO" style="background-color: hotpink;" row="2" overlap="1" positions="[3,3]">O</klima-dashboard-tile>
+          <klima-dashboard-tile id="tileN" style="background-color: green;" row="1" positions="[3]">N</klima-dashboard-tile>
+          <klima-dashboard-tile id="tileO" style="background-color: hotpink;" row="2" overlap="1" positions="[3,3]" width="40">O</klima-dashboard-tile>
           <klima-dashboard-tile id="tileP" style="background-color: lime;" row="1" overlap="2" positions="[4,4,4]">P</klima-dashboard-tile>
         </klima-dashboard>
       </template>
