--- a/all-components.html
+++ b/all-components.html
@@ -1,2 +1,3 @@
 <link rel="import" href="klima-dashboard.html">
 <link rel="import" href="klima-dashboard-tile.html">
+<link rel="import" href="klima-dashboard-page.html">
