--- a/demo/klima-dashboard-page-demo.html
+++ b/demo/klima-dashboard-page-demo.html
@@ -9,14 +9,10 @@
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../klima-dashboard-page.html">
 
-    <style is="custom-style" include="demo-pages-shared-styles">
-      .dashboards {
-        --klima-dashboard-width: 400px;
-        --klima-dashboard-height: 300px;
-      }
+    <style>
     </style>
   </head>
   <body>
-    <klima-dashboard-page>
+    <klima-dashboard-page></klima-dashboard-page>
   </body>
 </html>
