--- a/klima-dashboard-page.html
+++ b/klima-dashboard-page.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="./klima-dashboard.html">
 <link rel="import" href="./klima-dashboard-tile.html">
-<link rel="import" href="../google-chart/google-chart.html">
+<link rel="import" href="./department-tile.html">
 <!--
 `klima-dashboard-page`
 dashboard page
@@ -20,71 +20,25 @@ dashboard page
         --klima-dashboard-width: 1600px;
         --klima-dashboard-height: 800px;
       }
-      .flex {
-        @apply(--layout-horizontal);
-        @apply(--layout-around-justified);
-      }
-      .column {
-        width: 50%;
-      }
-      .spark {
-        height: 25px;
-        width: 150px;
-      }
       .tile {
         background-color: #EEEEEE;
       }
     </style>
     <h1>KLIMA Dashboard</h1>
     <klima-dashboard id="dashboard">
-      <klima-dashboard-tile row="1" positions="[1]">A</klima-dashboard-tile>
-      <klima-dashboard-tile row="1" positions="[2]">B</klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="1" positions="[1]">A</klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="1" positions="[2]">B</klima-dashboard-tile>
       <klima-dashboard-tile class="tile" row="2" positions="[1]">
-        <div>Innere Medizin</div>
-        <div class="flex">
-          <div class="column">
-            <div>Aktuelle Informationen</div>
-          </div>
-          <div class="column">
-            <div>Gewinner der Leistungen</div>
-          </div>
-        </div>
-        <hr>
-        <div class="flex">
-          <div class="column">
-            <div>Deckungsbeitrag: 1.803.143 €</div>
-            <google-chart class="spark"
-              type="line"
-              data='[["Periode", ""], ["0",4858808], ["0",5446441], ["0",5453282], ["0",6498193], ["0",5941928]]'
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-            <div>Belgungsgrad: 75 %</div>
-            <google-chart class="spark"
-              type="line"
-              data='[["Periode", ""], ["0",4858808], ["0",5446441], ["0",5453282], ["0",6498193], ["0",5941928]]'
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-            <div>Qualität: 55</div>
-            <google-chart class="spark"
-              type="line"
-              data='[["Periode", ""], ["0",4858808], ["0",5446441], ["0",5453282], ["0",6498193], ["0",5941928]]'
-              options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </div>
-          <div class="column">
-            <div>
-              <google-chart type="bar" style="width: 100%; height: 100%"
-                data='[["DFK", "Profit"], ["DFK 3",192380], ["DFK 4",145121], ["DFK 6",142608], ["DFK 5",128511], ["DFK 2",60495], ["DFK 1",39657]]'
-                options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"format": "#€"}}'>
-              </google-chart>
-            </div>
-          </div>
-        </div>
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/internalMedicine.json"></department-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile row="2" positions="[2]">D</klima-dashboard-tile>
-      <klima-dashboard-tile row="2" positions="[3]">E</klima-dashboard-tile>
-      <klima-dashboard-tile row="3" positions="[1]">F</klima-dashboard-tile>
-      <klima-dashboard-tile row="3" positions="[2]">G</klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="2" positions="[2]">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/surgicalWard.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="2" positions="[3]">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="3" positions="[1]">F</klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="3" positions="[2]">G</klima-dashboard-tile>
     </klima-dashboard>
   </template>
 
