Added border to dashboard

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
       <h3>Basic klima-dashboard demo</h3>
       <demo-snippet>
         <template>
-          <klima-dashboard class="dashboards">
+          <klima-dashboard border-width="4" class="dashboards">
             <!-- A -->
             <!-- <klima-dashboard-tile style="background-color: red;" row="1" overlap="1" positions="[1,1]" width="50">A</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: blue;" row="1" positions="[2]" width="25">B</klima-dashboard-tile>
@@ -49,7 +49,7 @@
             <klima-dashboard-tile style="background-color: silver;" row="5" positions="[2]" width="30">K</klima-dashboard-tile> -->
 
             <!-- B with mixed rows -->
-            <klima-dashboard-tile style="background-color: hotpink;" row="3" overlap="2" positions="[4,4,3]" width="5">H</klima-dashboard-tile>
+            <!-- <klima-dashboard-tile style="background-color: hotpink;" row="3" overlap="2" positions="[4,4,3]" width="5">H</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: yellow;" row="2" positions="[1]">D</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: blue;" row="1" positions="[2]" width="60">B</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: silver;" row="5" positions="[2]" width="30">K</klima-dashboard-tile>
@@ -59,7 +59,7 @@
             <klima-dashboard-tile style="background-color: pink;" row="5" positions="[1]" width="60">J</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: lime;" row="3" overlap="2" positions="[5,5,4]" width="5">I</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: aqua;" row="3" overlap="1" positions="[1,1]" width="10">E</klima-dashboard-tile>
-            <klima-dashboard-tile style="background-color: crimson;" row="3" overlap="1" positions="[2,2]" width="10">F</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: crimson;" row="3" overlap="1" positions="[2,2]" width="10">F</klima-dashboard-tile> -->
 
             <!-- C without widths -->
             <!-- <klima-dashboard-tile style="background-color: hotpink;" row="1" positions="[1]">A</klima-dashboard-tile>
@@ -99,7 +99,7 @@
             <klima-dashboard-tile style="background-color: crimson;" row="4" overlap="1" positions="[7,7]">0</klima-dashboard-tile> -->
 
             <!-- C with widths -->
-            <!-- <klima-dashboard-tile style="background-color: hotpink;" row="1" positions="[1]" width="8">A</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: hotpink;" row="1" positions="[1]" width="8">A</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: yellow;" row="1" positions="[2]" width="8">B</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: blue;" row="1" positions="[3]" width="8">C</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: silver;" row="1" positions="[4]" width="8">D</klima-dashboard-tile>
@@ -133,7 +133,7 @@
             <klima-dashboard-tile style="background-color: aqua;" row="6" overlap="1" positions="[7,7]" width="24">7</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: lime;" row="6" overlap="1" positions="[8,8]" width="20">9</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: crimson;" row="6" overlap="3" positions="[6,6,6,6]" width="8">6</klima-dashboard-tile>
-            <klima-dashboard-tile style="background-color: crimson;" row="4" overlap="1" positions="[7,7]" width="44">0</klima-dashboard-tile> -->
+            <klima-dashboard-tile style="background-color: crimson;" row="4" overlap="1" positions="[7,7]" width="44">0</klima-dashboard-tile>
 
             <!-- C with and without widths -->
             <!-- <klima-dashboard-tile style="background-color: hotpink;" row="1" positions="[1]">A</klima-dashboard-tile>
