--- a/klima-dashboard-page.html
+++ b/klima-dashboard-page.html
@@ -25,7 +25,7 @@ dashboard page
       }
     </style>
     <h1>KLIMA Dashboard</h1>
-    <klima-dashboard id="dashboard">
+    <klima-dashboard border-width="4" id="dashboard">
       <klima-dashboard-tile class="tile" row="1" positions="[1]">A</klima-dashboard-tile>
       <klima-dashboard-tile class="tile" row="1" positions="[2]">B</klima-dashboard-tile>
       <klima-dashboard-tile class="tile" row="2" positions="[1]">
