--- a/klima-dashboard-page.html
+++ b/klima-dashboard-page.html
@@ -3,6 +3,7 @@
 <link rel="import" href="./klima-dashboard.html">
 <link rel="import" href="./klima-dashboard-tile.html">
 <link rel="import" href="./department-tile.html">
+<link rel="import" href="./functional-central-tile.html">
 <!--
 `klima-dashboard-page`
 dashboard page
@@ -37,7 +38,9 @@ dashboard page
       <klima-dashboard-tile class="tile" row="2" positions="[3]">
         <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile class="tile" row="3" positions="[1]">F</klima-dashboard-tile>
+      <klima-dashboard-tile class="tile" row="3" positions="[1]">
+        <functional-central-tile source-url="http://127.0.0.1:8081/json/dashboard/department/centralAndFunctional.json"></functional-central-tile>
+      </klima-dashboard-tile>
       <klima-dashboard-tile class="tile" row="3" positions="[2]">G</klima-dashboard-tile>
     </klima-dashboard>
   </template>
