--- a/key-metrics-tile.html
+++ b/key-metrics-tile.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../google-chart/google-chart.html">
 <link rel="import" href="../iron-ajax/iron-ajax.html">
 <link rel="import" href="../paper-progress/paper-progress.html">
+<link rel="import" href="./shared-tile-styles.html">
 <!--
 `key-metrics-tile`
 tile with key metrics
@@ -10,7 +11,7 @@ tile with key metrics
 
 <dom-module id="key-metrics-tile">
   <template>
-    <style>
+    <style include="shared-tile-styles">
       :host {
         display: block;
         height: 100%;
@@ -19,13 +20,6 @@ tile with key metrics
       .flex {
         @apply(--layout-horizontal);
         @apply(--layout-around-justified);
-      }
-      .column {
-        width: 50%;
-      }
-      .spark {
-        height: 25px;
-        width: 150px;
       }
       table {
         border: 0;
@@ -49,13 +43,6 @@ tile with key metrics
         width: 100px;
         height: 20px;
       }
-      .positiveR {
-        --paper-progress-container-color: #7baaf7;
-      }
-      .negativeL {
-        --paper-progress-container-color: #3367d6;
-        --paper-progress-active-color: #7baaf7;
-      }
     </style>
     <iron-ajax id="ajax"
       auto
@@ -63,7 +50,7 @@ tile with key metrics
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <div>Key Metriken</div>
+    <h3 class="caption">Key Metriken</h3>
     <table>
       <thead>
         <tr>
